deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypomos-api
  namespace: hypomos-dev
spec:
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hypomos-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hypomos-frontend
  namespace: hypomos-dev
spec:
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hypomos-frontend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hypomos-identityserver
  namespace: hypomos-dev
spec:
  ports:
  - name: default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hypomos-identityserver
  sessionAffinity: None
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: hypomos-gateway
  namespace: hypomos-dev
spec:
  selector:
    app: hypomos-gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypomos-api
  namespace: hypomos-dev
  labels:
    app: hypomos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypomos-api
  template:
    metadata:
      labels:
        app: hypomos-api
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: app
        image: ${CICD_REGISTRY}/hypomos-api:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypomos-frontend
  namespace: hypomos-dev
  labels:
    app: hypomos-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypomos-frontend
  template:
    metadata:
      labels:
        app: hypomos-frontend
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: app
        image: ${CICD_REGISTRY}/hypomos-frontend:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypomos-gateway
  namespace: hypomos-dev
  labels:
    app: hypomos-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypomos-gateway
  template:
    metadata:
      labels:
        app: hypomos-gateway
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: app
        image: ${CICD_REGISTRY}/hypomos-gateway:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hypomos-identityserver
  namespace: hypomos-dev
  labels:
    app: hypomos-identityserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hypomos-identityserver
  template:
    metadata:
      labels:
        app: hypomos-identityserver
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: app
        image: ${CICD_REGISTRY}/hypomos-identityserver:${CICD_EXECUTION_SEQUENCE}
        ports:
        - containerPort: 80
