deploy.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: hypomos-ci
- apiVersion: v1
  kind: Service
  metadata:
    name: hypomos-web-loadbalancer
    namespace: hypomos-ci
  spec:
    externalTrafficPolicy: Cluster
    ports:
    - name: 80tcp803
      nodePort: 31445
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      workload.user.cattle.io/workloadselector: deployment-hypomos-ci-hypomos-web
    type: LoadBalancer
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    labels:
      traffic-type: external
    annotations:
      kubernetes.io/ingress.class: traefik
      traefik.frontend.rule.type: PathPrefixStrip
    name: hypomos-ci-external
    namespace: hypomos-ci
  spec:
    rules:
    - host: hypomos.bwalti.net
      http:
        paths:
        - path: /
          backend:
            serviceName: hypomos-web-loadbalancer
            servicePort: 80
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      workload.user.cattle.io/workloadselector: deployment-hypomos-ci-hypomos-web
    name: hypomos-web
    namespace: hypomos-ci
  spec:
    selector:
      matchLabels:
        workload.user.cattle.io/workloadselector: deployment-hypomos-ci-hypomos-web
    template:
      metadata:
        labels:
          workload.user.cattle.io/workloadselector: deployment-hypomos-ci-hypomos-web
      spec:
        containers:
        - image: hypomos/ci:dev
          imagePullPolicy: IfNotPresent
          name: hypomos-web
          ports:
          - containerPort: 80
            name: 80tcp803
            protocol: TCP
        imagePullSecrets:
        - name: docker-hub
        restartPolicy: Always
kind: List
